2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Ensure that recorded files have no gaps overlapping them

2010-11-16  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/producers/videotest/wizard.glade:
	Fix pattern image display error.

2010-11-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent.py:
	  Show us what pipeline we can't parse.
	* flumotion/component/eater.py:
	* flumotion/component/feedcomponent010.py:
	  Comments and doc strings.

2010-11-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_component_padmonitor.py:
	* flumotion/component/padmonitor.py:
	  Make naming more uniform - an FREQUENCY is not an INTERVAL
	  Document and comment.

2010-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/looper/looper.py:
	Call base class's method with instance as first argument as we
	should be doing.

2010-11-03  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/component/combiners/switch/basicwatchdog.py:
	Add missing attribute to the SingleBasicWatchdog class that was
	causing a traceback when using the single-basic-watchdog-combiner
	component.

2010-11-02  Xavier Queralt  <xqueralt@gmail.com>

	reviewed by: Pepe Ribas

	* flumotion/twisted/reflect.py:
	- Strip the quotation marks from the exception's message to be
	compatible with python27's ihooks module.
	- Use twisted's reflect.namedAny if we have twisted 8.0 or greater.
	Fixes #1469

2010-10-29  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/test/test_component_icystreamer.py:
	Fix the test to consider the changes in last revisions

2010-10-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff 

	* flumotion/component/consumers/httpstreamer/httpstreamer.py: