@@ -3,6 +3,14 @@
 	reviewed by: Xavier Queralt
 
 	* flumotion/component/consumers/disker/disker.py:
+	* flumotion/test/test_component_disker.py:
+	Add an index class and unit tests
+
+2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Xavier Queralt
+
+	* flumotion/component/consumers/disker/disker.py:
 	Ensure that recorded files have no gaps overlapping them
 
 2010-11-16  Josep Joan Ribas  <jribas@flumotion.com>
